--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <html>
 <head>
+  <link rel="stylesheet" href="style.css">
   <title>
     
   </title>
 </head>
+<header>
+  <img class="logo" src="images/logo.png"/>
+  <a href="">Головна</a>
+  <a href="">Про табір</a>
+  <a href="">Програма</a>
+  <a href="">Участь</a>
+  
+  
+</header>
   <body>
     
   </body>
-  
+<script src="main.js"></script>  
 </html>
