ввечері дороблю стилі всього що понаписував

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   <body>
    
    <h1>Табір "LITO GO"</h1>
-    <p>місце, де діти в природі зустрічаються з пригодами. Свіже гірське повітря, величні ліси та дзвінкі річки створюють ідеальну атмосферу для відпочинку та навчання</p>
-    <div>
-      <h1>Наші переваги</h1>
+    <p>місце, де діти в природі зустрічаються з пригодами. </p>
+    <p>Свіже гірське повітря, величні ліси та дзвінкі річки створюють ідеальну атмосферу для відпочинку та навчання</p>
+    <div class="perevagu">
+      <h1 class="text_perevagu">Наші переваги</h1>
       <ul>
             <li>✅ 100% безпека</li>
             <li>📚 Освітня і весела програма</li>
