--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     
   </title>
 </head>
-<header>
+<header class="header">
   <img class="logo" src="images/logo.png"/>
+  <nav>
   <a href="">Головна</a>
   <a href="">Про табір</a>
   <a href="">Програма</a>
   <a href="">Участь</a>
-  
+  </nav>
   
 </header>
   <body>
