--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-  <title>
-    
-  </title>
-</head>
-<header class="header">
-  <img class="logo" src="images/logo.png"/>
-  <nav>
-  <a href="">Головна</a>
-  <a href="">Про табір</a>
-  <a href="">Програма</a>
-  <a href="">Участь</a>
-  </nav>
-  
-</header>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title> </title>
+  </head>
+  <header class="header">
+    <img class="logo" src="images/logo.png" />
+    <nav>
+      <a href="">Головна</a>
+      <a href="">Про табір</a>
+      <a href="">Програма</a>
+      <a href="">Участь</a>
+    </nav>
+  </header>
   <body>
-   
-   <h1 class="name_short_opis">Табір "LITO GO"</h1>
-    <p class="short_opis">місце, де діти в природі зустрічаються з пригодами. </p>
-    <p class="short_opis">Свіже гірське повітря, величні ліси та дзвінкі річки створюють ідеальну атмосферу для відпочинку та навчання</p>
+    <h1 class="name_short_opis">Табір "LITO GO"</h1>
+    <p class="short_opis">
+      місце, де діти в природі зустрічаються з пригодами.
+    </p>
+    <p class="short_opis">
+      Свіже гірське повітря, величні ліси та дзвінкі річки створюють
+      ідеальну атмосферу для відпочинку та навчання
+    </p>
     <div class="perevagu">
       <h1 class="text_perevagu">Наші переваги</h1>
       <ul>
-            <li>✅ 100% безпека</li>
-            <li>📚 Освітня і весела програма</li>
-            <li>👨‍🏫 Професійна команда</li>
-            <li>🌿 Чудова природа</li>
-        </ul>
+        <li>✅ 100% безпека</li>
+        <li>📚 Освітня і весела програма</li>
+        <li>👨‍🏫 Професійна команда</li>
+        <li>🌿 Чудова природа</li>
+      </ul>
     </div>
 
     <h1 class="name_opis">Про табір</h1>
-    <p class="opis">Пригодницький табір розташований у гірській місцевості Карпат, серед лісів, гірських потоків і мальовничих вершин. Учасників табору чекає насичена програма, що поєднує активний відпочинок, навчання практичним навичкам виживання та командні пригоди.
-Проживання організоване у наметовому містечку або простих дерев’яних будиночках. Табір обладнаний місцями для багаття, кухнею на свіжому повітрі та окремими зонами для навчань і змагань.</p>
+    <p class="opis">
+      Пригодницький табір розташований у гірській місцевості Карпат,
+      серед лісів, гірських потоків і мальовничих вершин. Учасників
+      табору чекає насичена програма, що поєднує активний відпочинок,
+      навчання практичним навичкам виживання та командні пригоди.
+      Проживання організоване у наметовому містечку або простих
+      дерев’яних будиночках. Табір обладнаний місцями для багаття,
+      кухнею на свіжому повітрі та окремими зонами для навчань і
+      змагань.
+    </p>
   </body>
-<script src="main.js"></script>  
+  <script src="main.js"></script>
 </html>
