--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   
 </header>
   <body>
-   
+   <div class="opis1">
    <h1 class="name_short_opis">Табір "LITO GO"</h1>
     <p class="short_opis">місце, де діти в природі зустрічаються з пригодами. </p>
     <p class="short_opis">Свіже гірське повітря, величні ліси та дзвінкі річки створюють ідеальну атмосферу для відпочинку та навчання</p>
+    </div>
     <div class="perevagu">
       <h1 class="text_perevagu">Наші переваги</h1>
       <ul>
@@ -30,7 +31,7 @@
     </div>
 
     <h1 class="name_opis">Про табір</h1>
-    <p class="opis">Пригодницький табір розташований у гірській місцевості Карпат, серед лісів, гірських потоків і мальовничих вершин. Учасників табору чекає насичена програма, що поєднує активний відпочинок, навчання практичним навичкам виживання та командні пригоди.
+    <p class="opis2">Пригодницький табір розташований у гірській місцевості Карпат, серед лісів, гірських потоків і мальовничих вершин. Учасників табору чекає насичена програма, що поєднує активний відпочинок, навчання практичним навичкам виживання та командні пригоди.
 Проживання організоване у наметовому містечку або простих дерев’яних будиночках. Табір обладнаний місцями для багаття, кухнею на свіжому повітрі та окремими зонами для навчань і змагань.</p>
   </body>
 <script src="main.js"></script>  
