--- a/golovna.html
+++ b/golovna.html
@@ -1,15 +1,16 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <title> </title>
+    <link rel="stylesheet" href="golovna.css" />
+    <title> Головна </title>
+   
   </head>
   <header class="header">
     <img class="logo" src="images/logo.png" />
     <nav>
-      <a href="">Головна</a>
-      <a href="">Про табір</a>
-      <a href="">Програма</a>
-      <a href="">Участь</a>
+       <a href="golovna.html">Головна</a>
+      <a href="pro tabir.html">Про табір</a>
+      <a href="program.html">Програма</a>
+      <a href="uchast.html">Участь</a>
     </nav>
   </header>
   <body>
