--- a/golovna.html
+++ b/golovna.html
@@ -32,11 +32,11 @@
         <li>🌿 Чудова природа</li>
       </ul>
     </div>
-
-    <h1 class="name_opis">Про табір</h1>
+<div class="protabir_golovne">
+    <h1>Про табір</h1>
 
    
-    <p class="opis2">
+    <p>
       Пригодницький табір розташований у гірській місцевості Карпат,
       серед лісів, гірських потоків і мальовничих вершин. Учасників
       табору чекає насичена програма, що поєднує активний відпочинок,
@@ -46,7 +46,7 @@
       кухнею на свіжому повітрі та окремими зонами для навчань і
       змагань.
     </p>
-
+</div>
   </body>
   <script src="main.js"></script>
 </html>
