--- a/pro tabir.html
+++ b/pro tabir.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="golovna.css" />
+    <link rel="stylesheet" href="pro tabir.css" />
     <title> Про табір </title>
   </head>
   <header class="header">
@@ -9,7 +9,7 @@
        <a href="golovna.html">Головна</a>
       <a href="pro tabir.html">Про табір</a>
       <a href="program.html">Програма</a>
-      <a href="uchast.html">Участь</a>
+      <a href="">Участь</a>
     </nav>
   </header>
   <body>
