--- a/program.html
+++ b/program.html
@@ -1,6 +1,6 @@
  <html>
   <head>
-    <link rel="stylesheet" href="golovna.css" />
+    <link rel="stylesheet" href="program.css" />
     <title> Програма </title>
   </head>
   <header class="header">
@@ -9,7 +9,7 @@
        <a href="golovna.html">Головна</a>
       <a href="pro tabir.html">Про табір</a>
       <a href="program.html">Програма</a>
-      <a href="uchast.html">Участь</a>
+      <a href="">Участь</a>
     </nav>
   </header>
   <body>
@@ -51,5 +51,49 @@
     Вечірні кола та ватри сприяють емоційному розвантаженню та формуванню довірливих стосунків у групі.
   </p>
 </div>
+
+<h2 class="theme">Тематичні дні табору</h2>
+  <div class="day-cards">
+    <div class="day-card">
+      <h3>1. День знайомств</h3>
+      <p>Ігри на знайомство, створення команд, девізів, вечір "Ми — одна команда!".</p>
+    </div>
+    <div class="day-card">
+      <h3>2. День виживання</h3>
+      <p>Навички виживання в природі, квест "Місія вижити".</p>
+    </div>
+    <div class="day-card">
+      <h3>3. Екологічний день</h3>
+      <p>Еко-активності, прибирання, апсайклінг, фільм про природу.</p>
+    </div>
+    <div class="day-card">
+      <h3>4. День пригод</h3>
+      <p>Похід, фото-завдання, гра "Загублений рюкзак".</p>
+    </div>
+    <div class="day-card">
+      <h3>5. День творчості</h3>
+      <p>Майстер-класи, вечір талантів або вистава.</p>
+    </div>
+    <div class="day-card">
+      <h3>6. День тиші</h3>
+      <p>Йога, медитація, тиха прогулянка, вогнище без слів.</p>
+    </div>
+    <div class="day-card">
+      <h3>7. День випробувань</h3>
+      <p>Смуга перешкод, спортивні челенджі, командна підтримка.</p>
+    </div>
+    <div class="day-card">
+      <h3>8. День добрих справ</h3>
+      <p>Посадка дерев, годівнички, вечір "Я змінюю світ".</p>
+    </div>
+    <div class="day-card">
+      <h3>9. День майбутнього</h3>
+      <p>Дискусії, візуалізація, лист "собі в майбутнє".</p>
+    </div>
+    <div class="day-card">
+      <h3>10. День дружби</h3>
+      <p>Турнір, флешмоб, фінальне вогнище та нагороди.</p>
+    </div>
+  </div>
   </body>
 </html>
