--- a/golovna.html
+++ b/golovna.html
@@ -10,13 +10,13 @@
        <a href="golovna.html">Головна</a>
       <a href="pro tabir.html">Про табір</a>
       <a href="program.html">Програма</a>
-      <a href="uchast.html">Участь</a>
+      <a href="">Участь</a>
     </nav>
   </header>
   <body>
 
    <div class="opis1">
-   <h1 class="name_short_opis">Табір "LITO GO"</h1>
+   <h1>Табір "LITO GO"</h1>
     <p class="short_opis">місце, де діти в природі зустрічаються з пригодами. </p>
     <p class="short_opis">Свіже гірське повітря, величні ліси та дзвінкі річки створюють ідеальну атмосферу для відпочинку та навчання</p>
     </div>
@@ -24,7 +24,7 @@
   
 
     <div class="perevagu">
-      <h1 class="text_perevagu">Наші переваги</h1>
+      <h1>Наші переваги</h1>
       <ul>
         <li>✅ 100% безпека</li>
         <li>📚 Освітня і весела програма</li>
@@ -47,6 +47,39 @@
       змагань.
     </p>
 </div>
+
+<section class="prices">
+  <h2 onclick="toggleTable()">Середні ціни за 7–10 днів перебування ⮞</h2>
+  <div id="priceTable" class="hidden">
+    <table>
+      <thead>
+        <tr>
+          <th>Тип табору</th>
+          <th>Приблизна ціна</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Бюджетний</td>
+          <td>5 000–8 000 грн</td>
+        </tr>
+        <tr>
+          <td>Середній рівень</td>
+          <td>8 000–14 000 грн</td>
+        </tr>
+        <tr>
+          <td>Преміум/елітний</td>
+          <td>15 000–25 000+ грн</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
+
+
+
+<a href="" class="register-button">Зареєструватися</a>
   </body>
-  <script src="main.js"></script>
+  <script src="golovna.js"></script>
 </html>
