--- a/golovna.html
+++ b/golovna.html
@@ -46,6 +46,7 @@
       кухнею на свіжому повітрі та окремими зонами для навчань і
       змагань.
     </p>
+    <a class="more_info" href="pro tabir.html">більше інформації</a>
 </div>
 
 <section class="prices">
