--- a/program.html
+++ b/program.html
@@ -13,6 +13,24 @@
     </nav>
   </header>
   <body>
+<div class="occupation">
+<h2>Що роблять діти в таборі:</h2>
+
+<button class="accordion">Переглянути список активностей</button>
+<div class="panel">
+  <ul>
+    <li>Піші походи в гори</li>
+    <li>Спортивні ігри та змагання</li>
+    <li>Навички виживання</li>
+    <li>Майстер-класи</li>
+    <li>Тематичні вечори</li>
+    <li>Екскурсії</li>
+    <li>Туристичне спорядження</li>
+    <li>Розвиток лідерських якостей</li>
+  </ul>
+</div>
+</div>
+
     <div class="schedule-container">
   <h2>Розклад дня табору</h2>
   <table class="schedule-table">
@@ -96,4 +114,5 @@
     </div>
   </div>
   </body>
+  <script src="program.js"></script>
 </html>
