--- a/golovna.html
+++ b/golovna.html
@@ -49,7 +49,7 @@
     <a class="more_info" href="pro tabir.html">більше інформації</a>
 </div>
 
-<section class="prices">
+<section class="price">
   <h2 onclick="toggleTable()">Середні ціни за 7–10 днів перебування ⮞</h2>
   <div id="priceTable" class="hidden">
     <table>
@@ -76,11 +76,12 @@
     </table>
   </div>
 </section>
-
-
-
-
 <a href="" class="register-button">Зареєструватися</a>
   </body>
   <script src="golovna.js"></script>
+  <footer>
+    <a href="">instagram</a>
+    <a href="">telegram</a>
+    <a href="">facebook</a>
+  </footer>
 </html>
