--- a/golovna.html
+++ b/golovna.html
@@ -51,7 +51,7 @@
 
 <section class="price">
   <h2 onclick="toggleTable()">Середні ціни за 7–10 днів перебування ⮞</h2>
-  <div id="priceTable" class="hidden">
+  <div id="priceTable" class="table">
     <table>
       <thead>
         <tr>
@@ -76,7 +76,7 @@
     </table>
   </div>
 </section>
-<a href="" class="register-button">Зареєструватися</a>
+<a href="" class="register">Зареєструватися</a>
   </body>
   <script src="golovna.js"></script>
   <footer>
