--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@
 <div class="occupation">
 <h2>Що роблять діти в таборі:</h2>
 
-<button class="accordion">Переглянути список активностей</button>
+<button class="aktiv">Переглянути список активностей</button>
 <div class="panel">
   <ul>
     <li>Піші походи в гори</li>
@@ -31,9 +31,9 @@
 </div>
 </div>
 
-    <div class="schedule-container">
+    <div class="rosklad">
   <h2>Розклад дня табору</h2>
-  <table class="schedule-table">
+  <table class="rozkladtable">
     <thead>
       <tr>
         <th>Час</th>
