--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title> </title>
+    <title>LITO GO </title>
   </head>
   <header class="header">
     <img class="logo" src="images/logo.png" />
