--- a/golovna.html
+++ b/golovna.html
@@ -51,7 +51,7 @@
 
 <section class="price">
   <h2 onclick="toggleTable()">Середні ціни за 7–10 днів перебування ⮞</h2>
-  <div id="priceTable" class="table">
+  <div id="priceTable" >
     <table>
       <thead>
         <tr>
