--- a/program.html
+++ b/program.html
@@ -31,9 +31,9 @@
 </div>
 </div>
 
-    <div class="rosklad">
+<div class="schedule-container">
   <h2>Розклад дня табору</h2>
-  <table class="rozkladtable">
+  <table class="schedule-table">
     <thead>
       <tr>
         <th>Час</th>
@@ -60,6 +60,7 @@
     </tbody>
   </table>
 </div>
+
 <div class="info-box">
   
   <p>
