--- a/program.html
+++ b/program.html
@@ -1,76 +1,128 @@
- <html>
-  <head>
-    <link rel="stylesheet" href="program.css" />
-    <title> Програма </title>
-  </head>
-  <header class="header">
-    <img class="logo" src="images/logo.png" />
-    <nav>
-       <a href="golovna.html">Головна</a>
-      <a href="pro tabir.html">Про табір</a>
-      <a href="program.html">Програма</a>
-      <a href="">Участь</a>
-    </nav>
-  </header>
-  <body>
-<div class="occupation">
-<h2>Що роблять діти в таборі:</h2>
+<html>
 
-<button class="aktiv">Переглянути список активностей</button>
-<div class="panel">
-  <ul>
-    <li>Піші походи в гори</li>
-    <li>Спортивні ігри та змагання</li>
-    <li>Навички виживання</li>
-    <li>Майстер-класи</li>
-    <li>Тематичні вечори</li>
-    <li>Екскурсії</li>
-    <li>Туристичне спорядження</li>
-    <li>Розвиток лідерських якостей</li>
-  </ul>
-</div>
-</div>
+<head>
+  <link rel="stylesheet" href="program.css" />
+  <title> Програма </title>
+</head>
+<header class="header">
+  <img class="logo" src="images/logo.png" />
+  <nav>
+    <a href="golovna.html">Головна</a>
+    <a href="pro tabir.html">Про табір</a>
+    <a href="program.html">Програма</a>
+    <a href="">Участь</a>
+  </nav>
+</header>
 
-    <div class="rosklad">
-  <h2>Розклад дня табору</h2>
-  <table class="rozkladtable">
-    <thead>
-      <tr>
-        <th>Час</th>
-        <th>Активність</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>07:30</td><td>Підйом, ранкова руханка або легкий похід до джерела</td></tr>
-      <tr><td>08:00</td><td>Особиста гігієна, прибирання території/наметів</td></tr>
-      <tr><td>08:30</td><td>Сніданок</td></tr>
-      <tr><td>09:15</td><td>Збори груп: план дня, мотиваційна хвилинка</td></tr>
-      <tr><td>10:00</td><td>Тренінги: лідерство, орієнтування, перша допомога</td></tr>
-      <tr><td>11:30</td><td>Пригодницька активність або командна гра</td></tr>
-      <tr><td>13:00</td><td>Обід</td></tr>
-      <tr><td>14:00</td><td>Тиха година / вільний час</td></tr>
-      <tr><td>15:30</td><td>Майстер-класи: виживання, арт-студія, фото</td></tr>
-      <tr><td>17:00</td><td>Полуденок</td></tr>
-      <tr><td>17:30</td><td>Стратегічні ігри або турніри</td></tr>
-      <tr><td>19:00</td><td>Вечеря</td></tr>
-      <tr><td>20:00</td><td>Вечірнє коло: обговорення дня</td></tr>
-      <tr><td>20:30</td><td>Тематичний вечір: ватра, нічна гра</td></tr>
-      <tr><td>22:00</td><td>Підготовка до сну</td></tr>
-      <tr><td>22:30</td><td>Відбій</td></tr>
-    </tbody>
-  </table>
-</div>
-<div class="info-box">
-  
-  <p>
-    Цей розклад створений для гармонійного розвитку підлітка: він поєднує активність, навчання, творчість і відпочинок. 
-    Завдяки структурованому дню діти навчаються самоорганізації, відповідальності та командній роботі. 
-    Регулярна фізична активність покращує здоров’я, а тематичні заняття розвивають лідерські якості, критичне мислення та впевненість у собі. 
-    Вечірні кола та ватри сприяють емоційному розвантаженню та формуванню довірливих стосунків у групі.
-  </p>
-</div>
+<body>
+  <div class="occupation">
+    <h2>Що роблять діти в таборі:</h2>
 
-<h2 class="theme">Тематичні дні табору</h2>
+    <button class="aktiv">Переглянути список активностей</button>
+    <div class="panel">
+      <ul>
+        <li>Піші походи в гори</li>
+        <li>Спортивні ігри та змагання</li>
+        <li>Навички виживання</li>
+        <li>Майстер-класи</li>
+        <li>Тематичні вечори</li>
+        <li>Екскурсії</li>
+        <li>Туристичне спорядження</li>
+        <li>Розвиток лідерських якостей</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="rosklad">
+    <h2>Розклад дня табору</h2>
+    <table class="rozkladtable">
+      <thead>
+        <tr>
+          <th>Час</th>
+          <th>Активність</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>07:30</td>
+          <td>Підйом, ранкова руханка або легкий похід до джерела</td>
+        </tr>
+        <tr>
+          <td>08:00</td>
+          <td>Особиста гігієна, прибирання території/наметів</td>
+        </tr>
+        <tr>
+          <td>08:30</td>
+          <td>Сніданок</td>
+        </tr>
+        <tr>
+          <td>09:15</td>
+          <td>Збори груп: план дня, мотиваційна хвилинка</td>
+        </tr>
+        <tr>
+          <td>10:00</td>
+          <td>Тренінги: лідерство, орієнтування, перша допомога</td>
+        </tr>
+        <tr>
+          <td>11:30</td>
+          <td>Пригодницька активність або командна гра</td>
+        </tr>
+        <tr>
+          <td>13:00</td>
+          <td>Обід</td>
+        </tr>
+        <tr>
+          <td>14:00</td>
+          <td>Тиха година / вільний час</td>
+        </tr>
+        <tr>
+          <td>15:30</td>
+          <td>Майстер-класи: виживання, арт-студія, фото</td>
+        </tr>
+        <tr>
+          <td>17:00</td>
+          <td>Полуденок</td>
+        </tr>
+        <tr>
+          <td>17:30</td>
+          <td>Стратегічні ігри або турніри</td>
+        </tr>
+        <tr>
+          <td>19:00</td>
+          <td>Вечеря</td>
+        </tr>
+        <tr>
+          <td>20:00</td>
+          <td>Вечірнє коло: обговорення дня</td>
+        </tr>
+        <tr>
+          <td>20:30</td>
+          <td>Тематичний вечір: ватра, нічна гра</td>
+        </tr>
+        <tr>
+          <td>22:00</td>
+          <td>Підготовка до сну</td>
+        </tr>
+        <tr>
+          <td>22:30</td>
+          <td>Відбій</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="info-box">
+
+    <p>
+      Цей розклад створений для гармонійного розвитку підлітка: він поєднує активність, навчання, творчість і
+      відпочинок.
+      Завдяки структурованому дню діти навчаються самоорганізації, відповідальності та командній роботі.
+      Регулярна фізична активність покращує здоров’я, а тематичні заняття розвивають лідерські якості, критичне мислення
+      та впевненість у собі.
+      Вечірні кола та ватри сприяють емоційному розвантаженню та формуванню довірливих стосунків у групі.
+    </p>
+  </div>
+
+  <h2 class="theme">Тематичні дні табору</h2>
   <div class="day-cards">
     <div class="day-card">
       <h3>1. День знайомств</h3>
@@ -113,6 +165,7 @@
       <p>Турнір, флешмоб, фінальне вогнище та нагороди.</p>
     </div>
   </div>
-  </body>
-  <script src="program.js"></script>
+</body>
+<script src="program.js"></script>
+
 </html>
