--- a/golovna.html
+++ b/golovna.html
@@ -80,6 +80,7 @@
   </body>
   <script src="golovna.js"></script>
   <footer>
+    <a href="" class="register">Зареєструватися</a>
     <a href="">instagram<img src="https://assets.streamlinehq.com/image/private/w_300,h_300,ar_1/f_auto/v1/icons/all-icons/instagram-logo-fmckv9cihlafpkm0z9fem.png/instagram-logo-8enw8ic510451dx7a7vsd4.png?_a=DATAdtAAZAA0"></a>
     <a href="">telegram<img src="https://img.icons8.com/ios_filled/512/telegram.png"></a>
     <a href="">facebook<img src="https://cdn-icons-png.flaticon.com/512/20/20673.png"></a>
