--- a/golovna.html
+++ b/golovna.html
@@ -11,7 +11,7 @@
         <a href="golovna.html">Головна</a>
         <a href="pro tabir.html">Про табір</a>
         <a href="program.html">Програма</a>
-        <a href="">Участь</a>
+        <a href="uchast.html">Участь</a>
     </nav>
 </header>
 
