--- a/uchast.html
+++ b/uchast.html
@@ -97,4 +97,12 @@
 </body>
 
 <script src="uchast.js"></script>
+<footer>
+  <a href="">instagram<img
+            src="https://assets.streamlinehq.com/image/private/w_300,h_300,ar_1/f_auto/v1/icons/all-icons/instagram-logo-fmckv9cihlafpkm0z9fem.png/instagram-logo-8enw8ic510451dx7a7vsd4.png?_a=DATAdtAAZAA0"></a>
+    <a href="">telegram<img src="https://img.icons8.com/ios_filled/512/telegram.png"></a>
+    <a href="">facebook<img src="https://cdn-icons-png.flaticon.com/512/20/20673.png"></a>
+    <b><p class="tel">Телефон: +380 93 248 2342</p></b>
+    <b><p class="tel">Адреса: урочище Полумистий, Микуличин, Івано-Франківська область, 78590</p></b>
+</footer>
 </html>
